--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,17 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
-    "target": "ES2022",
-    "moduleResolution": "Node",
-    "strict": true,
+    "target": "ES2020",
+    "module": "ES2020",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "outDir": "./dist"
+    "strict": true,
+    "outDir": "dist",
+    "allowJs": true,
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*", "training/**/*"],
+  "include": ["src/**/*"],
   "ts-node": {
-    "esm": true
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   }
 }
